# osr2mp4-core

./: .gitattributes  .gitignore  .setup.py.swp  MANIFEST.in  README.md  TODO  TODO.md  data.json  docker-compose.yaml  lambda_function.py  main.py  ppsettings.json  requirements.txt  settings.json  setup.py  strainsettings.json  testmain.py
osr2mp4/: Exceptions.py  InfoProcessor.py  __init__.py  config.json  global_var.py  install.py  osr2mp4.py  ppsettings.json  ppsettings_new_format.json  settings.json  strainsettings.json  test.py  write_data.py
osr2mp4.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
osr2mp4/ImageProcess/Curves/libcurves/: Approximator.h  BezierApproximator.cpp  BezierApproximator.h  CMakeLists.txt  CatmullApproximator.cpp  CatmullApproximator.h  LinearApproximator.cpp  LinearApproximator.h  PerfectApproximator.cpp  PerfectApproximator.h  Vector2.cpp  Vector2.h  ccurves.cp37-win32.pyd  ccurves.cp37-win_amd64.pyd  ccurves.cpp  ccurves.pyx  curves.cpp  curves.h  rmshit.sh  setup.py  test.py  z.py
res/: Audio codec list.txt  Video codec list.txt  airman.osr  daisan - -+ (Starfy) [Drop's Extra].osu  daisan.osr  daisanextreme.osu  fd.osr  future.osr  futurecider.osu  imaginedragons.osr  imaginedragons.osu  katayoku.osu  kys.osr  quaver.osr  tengaku.osu  test.osu
src/: .Components.py.swp  AFrames.py  Components.py  InfoProcessor.py  Judgement.py  README.md  TODO.txt  command  config.json  create_frames.py  curve.py  draw_frames.py  generate_slider.py  global_var.py  idk.py  main.py  make_frames.py  osr2mp4.py  osuparser.py  path_approximator.py  (+6 more)
(+654 files in other folders)
